--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Mohammad | A AI Developer, Researcher based in Auckland, New Zealand.
+    Dipalee Vinayak Pawar | Software Engineer in Auckland, New Zealand.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Mohammad</span>
+          <span>Dipalee Vinayak Pawar</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A AI Developer, Researcher based in Auckland, New Zealand.</p>
+        <p>Software Engineer in Auckland, New Zealand.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -188,13 +188,13 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              Hi! I'm Dipalee Vinayak Pawar, a Software Engineering student at Yoobee College.
+    I have experience with manual testing, Selenium with Java (Basic), and Jira.
+    Currently, I am focusing on learning Python and GitHub to build automation
+    skills and improve my software development workflow.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="documents/Kavita_Pawar_Resume.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
