--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
               </p>
               <ul class="work__list">
                 <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Python</li>
+                <li>GitHub</li>
+                <li>Jira</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                <a href="" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
@@ -105,10 +105,10 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Car Rental System</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                This project is a Car Rental System developed using Python and SQLite. It allows users to manage car bookings, customer details, and payments efficiently. The system uses object-oriented programming principles and provides a simple interface to add, rent, return, and view cars, along with secure data storage using an SQLite database.
+
               </p>
               <ul class="work__list">
                 <li>React</li>
@@ -194,12 +194,12 @@
     skills and improve my software development workflow.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="documents/Kavita_Pawar_Resume.pdf" class="btn">My Resume</a>
+            <a href="documents/dipalee_Pawar_Resume.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="" alt="" />
           </div>
         </div>
       </div>
@@ -221,7 +221,7 @@
           me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="mailto:dipaleepawar29@gmail.com" class="btn">dipaleepawar29@gmail.com</a>
       </div>
     </div>
   </section>
