--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="" />
 
   <!-- Put your site title here -->
   <title>
-    Dipalee Vinayak Pawar | Software Engineer in Auckland, New Zealand.
+    Dipalee Vinayak Pawar | Software Engineer and Software Tester in Auckland, New Zealand.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -59,7 +59,7 @@
           <span>Dipalee Vinayak Pawar</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>Software Engineer in Auckland, New Zealand.</p>
+        <p>Software Engineer and Software Tester in Auckland, New Zealand.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -93,7 +93,7 @@
                 <a href="" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                <a href="https://github.com/Dipalee1985/Dipalee-Pawar-Portfolio.git" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
@@ -110,12 +110,12 @@
                 This project is a Car Rental System developed using Python and SQLite. It allows users to manage car bookings, customer details, and payments efficiently. The system uses object-oriented programming principles and provides a simple interface to add, rent, return, and view cars, along with secure data storage using an SQLite database.
 
               </p>
-              <ul class="work__list">
+              <!--  <ul class="work__list">
                 <li>React</li>
                 <li>Next.js</li>
                 <li>Node</li>
                 <li>MongoDB</li>
-              </ul>
+              </ul> -->
 
               <div class="work__links">
                 <a href="#" class="link__text">
@@ -127,7 +127,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -135,14 +135,13 @@
             <div class="work__text">
               <h3>Notificator</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
               </ul>
 
               <div class="work__links">
@@ -155,7 +154,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="" class="work__image" alt="Project 3" />
             </div>
           </div>
         </div>
@@ -164,20 +163,20 @@
 
     <!-- ***** Clients ***** -->
 
-    <section class="client" id="clients">
+   <!--  <section class="client" id="clients">
       <div class="row">
         <h2>Clients</h2>
         <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
+          Add logos of the clients or companies you'have worked with. -->
+        <!--  <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
+         <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
           <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
           <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
           <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
           <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- ***** About ***** -->
 
@@ -232,17 +231,18 @@
     <div class="row">
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
+       <!-- <li class="footer__social-link-item">
         <li class="footer__social-link-item">
           <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
             <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
           </a>
-        </li>
+        </li>-->
         <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
+          <a href="https://github.com/Dipalee1985/Dipalee-Pawar-Portfolio.git" title="Link to Github Profile">
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
+        </a>
+        </li> 
+       <!-- <li class="footer__social-link-item">
           <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
             <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
           </a>
@@ -251,16 +251,16 @@
           <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
-        </li>
+        </li>-->
       </ul>
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
-      <p>
+     <!-- <p>
         &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
-      </p>
+      </p>-->
       <div class="footer__github-buttons">
         <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
+          src="https://github.com/Dipalee1985/Dipalee-Pawar-Portfolio.git"
           frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
         </iframe>
       </div>
